syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-租户
service SysTenant {
  //系统-租户-创建一条数据
  rpc CreateSysTenant(CreateSysTenantReq) returns (CreateSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/create"
      body: "*"
    };
  }
  //系统-租户-更新一条数据
  rpc UpdateSysTenant(UpdateSysTenantReq) returns (UpdateSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/update"
      body: "*"
    };
  }
  //系统-租户-更新状态
  rpc UpdateSysTenantStatus(UpdateSysTenantStatusReq) returns (UpdateSysTenantStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/update/status"
      body: "*"
    };
  }
  //系统-租户-删除一条数据
  rpc DeleteSysTenant(DeleteSysTenantReq) returns (DeleteSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/delete"
      body: "*"
    };
  }
  //系统-租户-单条数据查询
  rpc GetSysTenantInfo(GetSysTenantInfoReq) returns (GetSysTenantInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_tenant/info"};
  }
  //系统-租户-列表数据查询
  rpc GetSysTenantList(GetSysTenantListReq) returns (GetSysTenantListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_tenant/list"};
  }
}

//系统-租户信息
message SysTenantInfo {
  string id = 1; // id
  string name = 2; // 名称
  string remark = 3; // 备注
  string adminId = 4; // 租户管理员Id
  string expireTime = 6; // 过期时间
  repeated string menuIds = 7; // 菜单集合
  int32 status = 8; // 状态
  string createdAt = 9; // 创建时间
  string updatedAt = 10; // 更新时间
  string adminName = 11; // 租户管理员名称
}

//请求-系统-租户-创建一条数据
message CreateSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "name",
        "username",
        "password"
      ]
    }
  };

  string name = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 名称
  string remark = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 200
    }
  ]; // 备注
  string expireTime = 5 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 过期时间
  repeated string menuIds = 6 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {min_items: 1}
  ]; // 菜单
  int32 status = 7; // 状态
  string username = 8 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
  }]; // 用户名
  string password = 9 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
  }]; // 密码
}

//响应-系统-租户-创建一条数据
message CreateSysTenantReply {
  string id = 1; // id
}

//请求-系统-租户-更新一条数据
message UpdateSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 名称
  string remark = 3 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 200
    }
  ]; // 备注
  string expireTime = 6 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 过期时间
  repeated string menuIds = 7 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {min_items: 1}
  ]; // 菜单
  int32 status = 8; // 状态
}

//响应-系统-租户-更新一条数据
message UpdateSysTenantReply {}

//请求-系统-租户-更新状态
message UpdateSysTenantStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 状态
}

//响应-系统-租户-更新状态
message UpdateSysTenantStatusReply {}

//请求-系统-租户-删除一条数据
message DeleteSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-系统-租户-删除一条数据
message DeleteSysTenantReply {}

//请求-系统-租户-单条数据查询
message GetSysTenantInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-系统-租户-单条数据查询
message GetSysTenantInfoReply {
  SysTenantInfo info = 1;
}

//请求-系统-租户-列表数据查询
message GetSysTenantListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string name = 3; // 名称
  int32 status = 4; // 状态
  repeated string createdAt = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 2
    }
  ]; // 创建时间
}

//响应-系统-租户-列表数据查询
message GetSysTenantListReply {
  int32 total = 1; //总数
  repeated SysTenantInfo list = 2; // 列表数据
}
